# octopus

./: .gitattributes  .gitignore  ==1.0.0  DELETEME.txt  Package.swift  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-perf.yml  c-demos.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-perf.yml  java-codestyle.yml  link-check.yml  python-codestyle.yml  python-demos.yml  python-perf.yml  python.yml  spell-check.yml  web-codestyle.yml  web-demos.yml  web-perf.yml  web.yml
binding/android/: .gitignore  README.md  build.gradle
binding/ios/: Octopus-iOS.podspec  Octopus.swift  OctopusErrors.swift  OctopusMetadata.swift  README.md
binding/python/: .gitignore  README.md  __init__.py  _factory.py  _octopus.py  _util.py  octopus.py  requirements.txt  setup.py  test_octopus.py  test_octopus_perf.py  test_util.py  util.py
binding/web/: .gitignore  .npmignore  README.md  cypress.config.ts  package.json
demo/android/: README.md
demo/c/: .gitignore  CMakeLists.txt  README.md  octopus_index_demo.c  octopus_search_demo.c
demo/c/test/: test_octopus_c.py
demo/ios/: README.md
demo/python/: .gitignore  README.md  octopus_demo.py  requirements.txt  setup.py
demo/web/: .gitignore  README.md  eslint.config.mjs  index.html  package.json
demo/youtube/: README.md  octotube.py  requirements.txt
include/: pv_octopus.h
lib/wasm/: pv_octopus.wasm  pv_octopus_simd.wasm
(+145 files in other folders)
